[package]
name = "ui_experiments"
version = "0.1.0"
authors = ["René Rössler <rene@freshx.de>"]
edition = "2021"
rust-version = "1.72"

[dependencies]
chrono = "0.4"
egui = "0.26.0"
egui_plot = "0.26.0"
epaint = { version = "0.26.0", features = ["rayon"] }
emath = "0.26.0"
eframe = { version = "0.26.0", features = ["wgpu"] }
log = "0.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "*", features = ["webgpu", "webgl"] }
web-sys = "=0.3.67"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
